--- a/dxly/cs4.htm
+++ b/dxly/cs4.htm
@@ -50,7 +50,28 @@
 14、2019--2033，葛亦民福音传遍天下，被世人接受。<br>
 15、20331126，世界大同。<br>
 神经一29、20131126异梦：20年后（2033年）政党灭亡。和谐的共产社会，人类和平互助管理，不再需要专政党。<br>
-&nbsp;
+&nbsp;<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 
 </html>
