--- a/dxly/cs8.htm
+++ b/dxly/cs8.htm
@@ -34,7 +34,28 @@
 46、张尉：“葛亦民，你说E下来是你?”我其实并未说过，我是首次听你张尉这么说。我当时还说以前是我年龄不够，今天2021 11 28，我也52周岁了。<br>
 <br>
 <br>
-&nbsp;
+&nbsp;<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 
 </html>
