--- a/dxly/cz29.htm
+++ b/dxly/cz29.htm
@@ -51,6 +51,27 @@
 上午发下地理试卷，90分，最高。<br>
 中午和邰成华骑车去赵王山-----火葬场一游，也是他带我，但我也带了他一段。去了赵王山，我们绕了陵园一周，不知何意，观赏正在建之纪念馆，古色加新色。真好。<br>
 后去了火葬场，主要看一下大烟囱。去了后，也没什么好看，只有它在冒烟，下面几个哭着。忽然一个人问我们干什么的，我便说：“找舅舅”，他追问，我应答，说知道姓张，约我来的，他报了几个名字，我说不是，他说姓范，我咬定姓张，城里人，后他道午睡，又称开会，我们便走了，邰成华说：“和死人一样”，可是也够开心的，真是游玩成癖。
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 
 </html>
