--- a/dxly/cz30.htm
+++ b/dxly/cz30.htm
@@ -41,7 +41,28 @@
 今天看了电影《三笑》，原来以为了不得，经李二乔道好，使跃跃欲试起来，可看了时后并不见佳，唐伯虎图秋香什么呢？祝枝山，令人吐沫。晚上没事，走了文化宫，看人溜冰，有几个小伙子动作真优美，还有两个一边还跳舞，后又看了别人下棋。<br>
 <br>
 0512<br>
-早上懒得起（星期天），一天看了《巴黎圣母院》（没过仔细看），书还可以，可是冠以使雨果成名之名著，大有大名之下，其实难附之感。书上人物亦都不太令人乐观，晚自习又看上了《射雕英雄传》（上），倒也好极。
+早上懒得起（星期天），一天看了《巴黎圣母院》（没过仔细看），书还可以，可是冠以使雨果成名之名著，大有大名之下，其实难附之感。书上人物亦都不太令人乐观，晚自习又看上了《射雕英雄传》（上），倒也好极。<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 
 </html>
