--- a/dxly/cz31.htm
+++ b/dxly/cz31.htm
@@ -57,7 +57,28 @@
 胡城与冯青荣打了两包瓜子赌，胡说“梁树栎把梁冯间秘事语他，冯不信，后梁对质，竟有此事，冯只好买了，看来朋友间是不能不够朋友的。<br>
 <br>
 0525（六）<br>
-中午洗了衣服，因明天（七）上星期一课，今天就不回去了。决定明天回去。晚自习看了《射雕英雄传》（中集），可谓天下第一武打小说，穆念慈对杨康，真不叫人理解。
+中午洗了衣服，因明天（七）上星期一课，今天就不回去了。决定明天回去。晚自习看了《射雕英雄传》（中集），可谓天下第一武打小说，穆念慈对杨康，真不叫人理解。<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 
 </html>
