--- a/dxly/cz33.htm
+++ b/dxly/cz33.htm
@@ -53,7 +53,28 @@
 华挺敢《日日报》：亦民同志，不务正业，乱拉关系，实不能称为句容一书生，以我之见，称之为“素生”、“庸生”。<br>
 崔晖《新明晚报》（二评）：俗话说：龙攀龙，凤附凤，你能称得上是龙？还是凤？<br>
 冯青荣《天天评》（二评）：一评不够，再来一评，奶油书生，废我笔墨，岂值一评！<br>
-华挺敢《自由文谭》（二评）：区区小人，何足挂齿。？？
+华挺敢《自由文谭》（二评）：区区小人，何足挂齿。？？<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 
 </html>
