--- a/dxly/cs3.htm
+++ b/dxly/cs3.htm
@@ -30,7 +30,28 @@
 北京大学、出外国、诺贝尔文学奖、社团、统一世界。<br>
 时年16岁。<br>
 现在统一世界五步骤：南京大学、神网、神经、神教、统一世界。<br>
-&nbsp;
+&nbsp;<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 
 </html>
