--- a/dxly/cz32.htm
+++ b/dxly/cz32.htm
@@ -62,7 +62,28 @@
 中午和马文祥下棋，也没能睡。晚自习没上，和胡城下了几棋，便睡了。<br>
 <br>
 0610（一）<br>
-今天又扫包洁区，真麻烦，想不扫了。吃过晚饭后，因怕纪老师见骂，硬叫了李二乔、笪宏伟去，意思意思（粗粗扫了下），便到宿舍洗澡换衣。
+今天又扫包洁区，真麻烦，想不扫了。吃过晚饭后，因怕纪老师见骂，硬叫了李二乔、笪宏伟去，意思意思（粗粗扫了下），便到宿舍洗澡换衣。<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 
 </html>
