--- a/dxly/cz34.htm
+++ b/dxly/cz34.htm
@@ -50,7 +50,28 @@
 今早，姑妈送米来，硬给了四元多钱，我。<br>
 明天开始末考了，日知也到此结束吧！<br>
 <br>
-注：因高三学习忙，要应付头等大事高考，日记也就没时间写了，自己对自己说个对不起，日知暂停一年吧！SORRY，SORRY！自己原谅自己。
+注：因高三学习忙，要应付头等大事高考，日记也就没时间写了，自己对自己说个对不起，日知暂停一年吧！SORRY，SORRY！自己原谅自己。<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 
 </html>
