--- a/dxly/cz41.htm
+++ b/dxly/cz41.htm
@@ -55,7 +55,28 @@
 回来，我和两女生三人一起，在玄武湖上车到鼓楼，上了车我占了个位，给粟坐，她不肯，我亦不肯，弄得别愉要坐，一站到了该下车了。可我看到了鸡鸣寺三字，以为没到，车开是“下站鸡鸣寺”，大呼错了，她俩没法。我灵机一动，叫了司机停，三人下了，又走回鼓楼，再走到南大，上路上，我一个与两个女生在一起走。我紧张，高兴，又不知所措，微妙。傍晚，邓瑾、柳林兰来找，与陈金托去，85级外文一女生约见，说因短频快稿件，已是学通社社员了，哈！<br>
 <br>
 <br>
-&nbsp;
+&nbsp;<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 
 </html>
