--- a/dxly/cz52.htm
+++ b/dxly/cz52.htm
@@ -42,7 +42,28 @@ ME，HE SEE HER，SHE STOPS。我太高兴了。<br>
 晚看了电影《W的悲剧》，自觉很好，我又想到我，女人，人生，明星，真是悲剧吗？<br>
 <br>
 &nbsp;
-</p>
+</p><script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 
 </html>
