--- a/dxly/cz55.htm
+++ b/dxly/cz55.htm
@@ -31,7 +31,28 @@
 晚上看电影《赤澄黄绿青蓝紫》，还好。晚和戴为洋、施小晔相约去三食堂吃面条，一包虾味汤，我请客，以后他们各请，我有点不愿，如此天天得熬夜，吃完要到11点，受不了，但这样挺有趣，先吃几天吧，课外活动打了会排球。<br>
 <br>
 &nbsp;
-</p>
+</p><script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 
 </html>
