--- a/dxly/gwmfx.htm
+++ b/dxly/gwmfx.htm
@@ -93,16 +93,13 @@ QQ：50914333</font><br><br>
 <br>
 &nbsp;</p>
 <p>　</p>
-<p><IMG SRC="../pic/zfbgeyimin.jpg" alt="beautiful lady" align="left" border=0> 
-<IMG SRC="../pic/wxgeyimin.jpg" alt="beautiful lady" align="right" border=0>　</p><script>
+<p>
+<IMG SRC="../pic/zfbgeyimin.jpg" alt="beautiful lady" align="left" border=0 width="400" height="600"> 
+<IMG SRC="../pic/wxgeyimin.jpg" alt="beautiful lady" align="left" border=0 width="400" height="600"> <script>
 var _hmt = _hmt || [];
 (function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script><p>
+  var hm = document.createElement("
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7" s = document.getElementsByTagName("script")[0]; width="400" height="540"><p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- h -->
 <ins class="adsbygoogle"
@@ -113,8 +110,7 @@ var _hmt = _hmt || [];
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</p>
+</script></p>
 
 </body>
 
