--- a/dxly/cz51.htm
+++ b/dxly/cz51.htm
@@ -48,7 +48,28 @@
 晚《作品阅读》，鲁迅提出国民劣根性，民族无望，走向坟墓。徐强谈了会话，我只是体检时一识，竟为友了，人缘之巧，他语以后当睡我宿舍。<br>
 <br>
 &nbsp;
-</p>
+</p><script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 
 </html>
