--- a/dxly/jhsy9.htm
+++ b/dxly/jhsy9.htm
@@ -28,11 +28,17 @@
 有次在高牛B家，看了张合照，高牛B说有个人靶掉了，他要逃跑，用刀杀了阻挡他的人，高说不杀人，跑不掉。<br>
 虽然命案必破，事实好多命案破不了，案犯逍遥法外，这也是穷凶极恶之徒宁愿杀人，也要逃跑的原因。我老家江苏句容大卓乡，就有三个命案，二十几年没破，一个是石山头邮局夫妻俩被杀，他俩没说出钱柜密码，村民说说了也活不了，后儿子顶职。一个是跳舞纠纷，一男子被杀，当时破案，相关区域青状年都验了血，如我小舅舅。<br>
 以至上面干部来我村收费时，有村民说：“你们只知道收费，杀人案一个也破不了。”干部门哑口无言。<br><br> 
-<script async 
-
-src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></scri
-
-pt>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>	
+	
+</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- h -->
 <ins class="adsbygoogle"
      style="display:block"
@@ -42,7 +48,8 @@ pt>
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script></p>
+</script>
+</p>
 
 </body>
 
