--- a/fygc/4tq.htm
+++ b/fygc/4tq.htm
@@ -32,8 +32,10 @@
 神经十八41两大（社会化大生产和互联网大革命）的今天，实现葛亦民主义，实现共产社会，物质条件已具备，只等精神条件具备，即更新人类的心灵，葛亦民主义福音传遍全球，被人类接受。</p>
 <p><br>
 10、神经金律：[不与任何人作对],这是天国的快乐。</p>
-<p>&nbsp;</p>
-<p><br>
+<p>&nbsp;</p><img border=0 src="../pic/bk.jpg" >
+<p><br>百度贴吧大V认证：
+互联网思想家活动家，香港四季出版社签约作家。男，1969年生，中国江苏镇江人 ，毕业于南京大学中文系。出版了现代先知书神经，有人说是圣经修正案 。他的思想两大来源：基督教和共产主义。神经是他个人的信息，是对现实和未来的思考，部分是神启。
+<p><img src="../pic/dv.jpg"><img border="0" src="../dxrj/tiebadv.jpg">　<p>
 &nbsp;</p>
 <iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 </body>
