--- a/fygc/gcsj.htm
+++ b/fygc/gcsj.htm
@@ -16,7 +16,9 @@
 4、上帝造出大鱼和水中所滋生各样有生命的动物，造出各样飞鸟，又造出牲畜、昆虫、野兽，是第四日。<br>
 5、上帝说：“我们要照着我们的形像，按着我们的样式造人，使他们管理海里的鱼、空中的鸟、地上的牲畜和全地。”事就这样成了。上帝看着一切所造的都甚好，是第五日。<br>
 6、到第六日，天地万物都造齐了，上帝造物的工已经完毕。<br>
-7、葛神说圣经单休，咱们神经双休，就在第六、七日歇了他一切创造的工，安息了。<br>
+7、葛神说圣经单休，咱们神经双休，就在第六、七日歇了他一切创造的工，安息了。</p>
+<p>&nbsp;</p>
+<p><br><p><img border="0" src="../rj/cz.jpg"></p>
 　</p>
 <iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 </body>
