--- a/gzly/zp.htm
+++ b/gzly/zp.htm
@@ -17,7 +17,7 @@
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片墙第<span lang="en-us">4</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片墙第<span lang="en-us">5</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片墙第<span lang="en-us">6</span>季</a> 
- <p>标准照&nbsp;&nbsp;&nbsp;&nbsp;</p>
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp7.htm" target="_blank">照片墙第<span lang="en-us">7</span>季</a> <p>标准照&nbsp;&nbsp;&nbsp;&nbsp;</p>
 </p>
 <p><img border="0" src="bzz.png" width="239" height="219">
 <img border="0" src="d.png" width="150" height="150"><img border="0" src="gd.png" width="150" height="150">
