--- a/gzly/zp5.htm
+++ b/gzly/zp5.htm
@@ -17,7 +17,7 @@
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片墙第<span lang="en-us">4</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片墙第<span lang="en-us">5</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片墙第<span lang="en-us">6</span>季</a> 
-
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp7.htm" target="_blank">照片墙第<span lang="en-us">7</span>季</a>
 <p><img border="0" src="../dxrj/gym3l.jpg"><img border="0" src="../dxrj/bqb3.jpg"><img border="0" src="../dxrj/bqb.jpg"><img border="0" src="../dxrj/bqb2.jpg">
 <img border="0" src="../dxrj/sjzx.png"><img border="0" src="../dxrj/zjz.jpg"><img border="0" src="../dxrj/zjzh.jpg"><img border="0" src="../dxrj/zjzl.jpg">
 <img border="0" src="../dxrj/dhz.jpg"><img border="0" src="../dxrj/dhz2.jpg">
