--- a/gzly/zp6.htm
+++ b/gzly/zp6.htm
@@ -17,7 +17,7 @@
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片墙第<span lang="en-us">4</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片墙第<span lang="en-us">5</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片墙第<span lang="en-us">6</span>季</a> 
-
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp7.htm" target="_blank">照片墙第<span lang="en-us">7</span>季</a>
 
 <p><img border="0" src="../dxrj/bhl.jpg"><img border="0" src="../dxrj/xq.jpg"><img border="0" src="../dxrj/hqf.jpg"><img border="0" src="../dxrj/hxm.jpg"><img border="0" src="../dxrj/kh.jpg">
 <img border="0" src="../dxrj/djp.jpg"><img border="0" src="../dxrj/gh.jpg"><img border="0" src="../dxrj/hx.jpg"><img border="0" src="../dxrj/wq1.jpg">
