--- a/gzly/zp2.htm
+++ b/gzly/zp2.htm
@@ -17,7 +17,7 @@
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片墙第<span lang="en-us">4</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片墙第<span lang="en-us">5</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片墙第<span lang="en-us">6</span>季</a> 
-
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp7.htm" target="_blank">照片墙第<span lang="en-us">7</span>季</a>
 <p><img border="0" src="../rj/bzzzu.png">标准照<img border="0" src="../rj/bzzzh.png">标准照<img border="0" src="../rj/1981.png">1981<img border="0" src="../rj/cz2.png">初中<img border="0" src="../rj/sm2.png">圣母
  <img border="0" src="../rj/1984.png">高中<img border="0" src="../rj/xwh.png">大学<img border="0" src="../rj/qxs.png">大学<img border="0" src="../rj/ns.png">工作</p>
 <p><img border="0" src="../pic/1.jpg"></p>
