--- a/gzly/zp4.htm
+++ b/gzly/zp4.htm
@@ -17,6 +17,7 @@
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片墙第<span lang="en-us">4</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片墙第<span lang="en-us">5</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片墙第<span lang="en-us">6</span>季</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp7.htm" target="_blank">照片墙第<span lang="en-us">7</span>季</a>
 <p><img border="0" src="../scsl/jsszhm.jpg"><img border="0" src="../scsl/gymmn.jpg"><img border="0" src="../scsl/dbg.jpg"><img border="0" src="../scsl/ghxw.jpg"><img border="0" src="../scsl/baidubeian.jpg"><img border="0" src="../scsl/beianali.jpg">
 
 <img border="0" src="../rj/dt1.png" width="97" height="150"><img border="0" src="../rj/gz3.png"><img border="0" src="../rj/gz1.png"><img border="0" src="../rj/d2.png"><img border="0" src="../rj/d1.png">
@@ -32,7 +33,7 @@
 	<img border="0" src="../rj/nj2019.jpg"><span lang="en-us">2019</span>
 	<img border="0" src="../rj/2020zj.jpg">
 	<img border="0" src="../rj/2020zj2.jpg">
-	<span lang="en-us">2020</span><p><img border="0" src="../scsl/2021.jpg"><img border="0" src="../scsl/gz.jpg">　</p>
+	<span lang="en-us">2020</span><p><img border="0" src="../scsl/2021.jpg"><img border="0" src="../scsl/2022.jpg">2022<img border="0" src="../scsl/gz.jpg">　</p>
 <p><img border="0" src="../scsl/tzw.jpg"><img border="0" src="../scsl/gegod.jpg">　</p>
 <p><img border="0" src="../scsl/gejidu.jpg"><img border="0" src="../scsl/mglt.jpg">　英国玛格丽特（网恋）　</p>
 
