--- a/gzly/zp7.htm
+++ b/gzly/zp7.htm
@@ -3,12 +3,12 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>葛亦民照片墙第3季</title>
+<title>葛亦民照片墙第7季之网络图片</title>
 </head>
 
 <body>
 
-<p>葛亦民照片墙第3季</p>
+<p>葛亦民照片墙第7季之网络图片</p>
 <p>　</p>
 <p>
 </p><a href="../gzly/zp.htm" target="_blank">照片墙第1季</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
@@ -17,40 +17,13 @@
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片墙第<span lang="en-us">4</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片墙第<span lang="en-us">5</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片墙第<span lang="en-us">6</span>季</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp7.htm" target="_blank">照片墙第<span lang="en-us">7</span>季</a>
-<p><img border="0" src="../rj/nxg.png">大学<img border="0" src="../rj/mas.png">大一<img border="0" src="../rj/dxy.png">大学<img border="0" src="../rj/qxs2.png">大四<img border="0" src="../rj/js.png">工作<img border="0" src="../rj/dh1.png">大婚</p>
-<p><img border="0" src="../rj/gym.jpg"></p>
-<p><img border="0" src="../rj/2019.jpg"></p>
-<p><img border="0" src="../rj/cd.jpg"></p>
-<p><img border="0" src="../rj/cp.gif"></p>
-<p><img border="0" src="../rj/cz.jpg"></p>
-<p><img border="0" src="../rj/dx.jpg"></p>
-<p><img border="0" src="../rj/g5.jpg"></p>
-<p><img border="0" src="../rj/g6.jpg"></p>
-<p><img border="0" src="../rj/gww.jpg"></p>
-<p><img border="0" src="../rj/jg.jpg"></p>
-<p><img border="0" src="../rj/wc.png"></p>
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp7.htm" target="_blank">照片墙第<span lang="en-us">7</span>季</a> 
 
-<p><img border="0" src="../rj/ymg.jpg"></p>
-
-<p><img border="0" src="../rj/ymg2.jpg"></p>
-
-<p><IMG border="0" SRC="../rj/ymge.jpg" ></p>
-
-<p><IMG border="0" SRC="../rj/ymgey.jpg" ></p>
-
-
-
-<p><img border="0" src="../rj/zuox.jpg"></p>
-
-
-
-<p><img border="0" src="../rj/zx.jpg"></p>
-
-<p><img border="0" src="../rj/gymny1.jpg"></p>
-<p><img border="0" src="../rj/gymny2.jpg"></p><p><img border="0" src="../rj/gymny3.jpg"></p><p><img border="0" src="../rj/gymny4.jpg"></p>
-<p><img border="0" src="../rj/gymny5.jpg"></p><p><img border="0" src="../rj/gymny7.jpg"></p><p><img border="0" src="../rj/gymny6.jpg"></p>
-<p>　</p><p>　</p>
+<p><img border="0" src="../dxrj/hszg.jpg"><img border="0" src="../dxrj/zzbn.jpg"><img border="0" src="../dxrj/zzbn2.jpg"><img border="0" src="../dxrj/dpf.jpg"><img border="0" src="../dxrj/cm1.jpg">
+<img border="0" src="../dxrj/cm2.jpg"><img border="0" src="../dxrj/8xx.jpg"><img border="0" src="../dxrj/fxj.jpg"><img border="0" src="../dxrj/tam.jpg">
+<img border="0" src="../dxrj/tam2.jpg"><img border="0" src="../dxrj/c2d.jpg"><img border="0" src="../dxrj/gold2d.jpg"><img border="0" src="../dxrj/ymgtx.jpg">
+<img border="0" src="../dxrj/tiebadv.jpg"><img border="0" src="../dxrj/anecdote of geyimin.jpg"><img border="0" src="../dxrj/bggym.jpg">
+<img border="0" src="../dxrj/xj.jpg"><p>　</p>
 <p> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　</font></p>
 <p><script>
 var _hmt = _hmt || [];
