--- a/nszz/gymsp.htm
+++ b/nszz/gymsp.htm
@@ -156,10 +156,11 @@
 
 　<p>
 <font size="4" color="#800080">　<p><span lang="en-us">
-<font size="6" color="#800080">&nbsp;&nbsp; 四、 </font></span>
+<font size="6" color="#800080">&nbsp;&nbsp; 四、 </font></span><font size="5" color="#800080">
+	<a target="_blank" a href="https://pan.baidu.com/s/1bMJMpIfm037EwBUtQBGexg?pwd=mcvf ">百度网盘葛亦民视频、直播神经视频集</a></font>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
+
 <font size="5" color="#800080">
-	<a target="_blank" a href="https://www.aliyundrive.com/s/3EEDW6YKmfT">阿里云盘葛亦民视频、
-直播神经视频集</a></font>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
+	<a target="_blank" a href="https://www.aliyundrive.com/s/3EEDW6YKmfT">阿里云盘视频集</a></font>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
 <a target="_blank" a href="../dxrj/sjsp.htm">百度网盘神经经文视频</a><span lang="en-us">&nbsp;&nbsp;&nbsp; </span><p><font size="5" color="#800080">&nbsp; </font>
 <font size="6" color="#800080">&nbsp;</font>
 <a target="_blank" a href="http://v.youku.com/v_show/id_XNjQyODY0NzA0.html">【葛亦民幸福的小家庭】 </a>&nbsp;&nbsp;
