--- a/xyyd/zx.htm
+++ b/xyyd/zx.htm
@@ -40,7 +40,7 @@
 												二、异象。</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
-												5、2001年秋，葛亦民异梦中，神说：“我是神，你们要听他。”他指葛亦民。（葛亦民受膏作神）</font></div>
+												6、2001年秋，葛亦民异梦中，神说：“我是神，你们要听他。”他指葛亦民。（葛亦民受膏作神）</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
 												<br>
@@ -61,7 +61,11 @@
 												<br>
 												11、2012，创立神教、神党,明确作为一种价值观，而不是一种组织。<br>
 												12、2012--19，和平地输出和谐的葛亦民价值观，内容即为神经。<br>
-												13、2019，全球实现共产社会。</font></div>
+												1</font></font><font style="font-size: 12px; color: rgb(85,85,85)" face="Arial, Helvetica, sans-serif">3、20191001，葛亦民成神。<br>
+												14、2019--2033，葛亦民福音传遍天下，被世人接受。<br>
+												15、20331126，世界大同。</div>
+											</font>
+											<font style="font-size: 12px; color: rgb(85,85,85)" face="Verdana">
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
 												五、路加福音17：24因为人子在他降临的日子。。。25只是他必须先受许多苦，又被这世代弃绝。<br>
@@ -89,8 +93,7 @@
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
 												1、肥罗是否转会扑朔迷离 米兰皇马究竟谁在说谎<br>
-												<a target="_blank" href="http://sports.163.com/06/0814/11/2OG0AQE500051CD5.html">
-												http://sports.163.com/06/0814/11/2OG0AQE500051CD5.html</a><br>
+												http://www.gegod.com/gzly/163xw.jpg<br>
 												安切洛蒂是在夏季联赛米兰1：0战胜马竞的赛后媒体见面会上做出上述辟谣性声名的，用他的话讲，“《意大利体育报》和其他意大利或者西班牙的报纸一样，</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
@@ -121,10 +124,10 @@
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
 												<br>
-												四、纲领：2019年用葛亦民价值观在全世界建立共产社会。</font></div>
+												四、纲领：2033年用葛亦民价值观在全世界建立共产社会。</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
-												五、公元2019年，撒旦被永远扔在硫磺的火湖里，神施行审判的时候，葛亦民做王，新天新地，国度时代（共产社会）。</font></div>
+												五、公元2033年，撒旦被永远扔在硫磺的火湖里，神施行审判的时候，葛亦民做王，新天新地，国度时代（共产社会）。</font></div>
 											</font></td>
 										</tr>
 									</table>
