--- a/lj.html
+++ b/lj.html
@@ -15,12 +15,10 @@
 	<b>&nbsp;</b></font><b><font size="5">神教所有网站</font></b><p><br><br>
 	
 
-<font color="#800000">	<b><font size="4">航空母舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></b></font><font size="4">&nbsp;<b><a target="_blank"href="http://www.gegod.com">神网</a></b>&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <b><a target="_blank" href="http://www.gegod.com/bbs">神社区</a></b>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
-	<b><a target="_blank" href="http://www.gegod.com/club">神论坛</a></b>&nbsp;&nbsp;&nbsp; &nbsp; 
-&nbsp; <a href="http://www.kaila.com.cn" target="_blank"><font size="4">开啦（凯拉）</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><a target="_blank" href="http://bbs.gegod.com/bbs">紫薇圣人社区</a> &nbsp; &nbsp;
-	</b><a href="http://www.wjxw-lib.net" target="_blank"><font size="4">慰藉小屋</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-	<a target="_blank" href="http://www.20331126.xyz">大同世界网</a>&nbsp;&nbsp;&nbsp; &nbsp; <b><a target="_blank" href="http://www.20331126.xyz/bbs">大同世界社区</a>
+<font color="#800000">	<b><font size="4">航空母舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></b></font><font size="4">&nbsp;<b><a target="_blank"href="http://www.gegod.com">神网</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <b><a target="_blank" href="http://www.gegod.com/bbs">神社区</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+	<b><a target="_blank" href="http://www.gegod.com/club">神论坛</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+&nbsp;
+	<a target="_blank" href="http://www.20331126.xyz">大同世界网</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <b><a target="_blank" href="http://www.20331126.xyz/bbs">大同世界社区</a>
 	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
 	</b> </font>
 <p>
@@ -33,8 +31,8 @@
 
 	</font> </font><font size="4" color="#800000">&nbsp;&nbsp;
 	
-	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a>&nbsp; &nbsp;  <a target="_blank" href="http://gym.gegod.com/bbs">大同世界社区</a> &nbsp; &nbsp;
-	 <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://group.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp;
+	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a> &nbsp; &nbsp;  <a target="_blank" href="http://bbs.gegod.com/bbs">大同世界社区</a> &nbsp; &nbsp;&nbsp;
+	 <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://group.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
 <a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.sinovision.net/?591176">美国中文网</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://home.20331126.xyz">yooco论坛</a>&nbsp; &nbsp;
@@ -50,29 +48,30 @@
 	<br><font color="#800000"><strong>驱逐舰</strong>：&nbsp;&nbsp; &nbsp; &nbsp; </font> 
 		<a target="_blank" href="https://www.zhihu.com/people/de-yang-li-juan">知乎</a>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; <a target="_blank" href="https://weibo.com/g20331126">微博</a>&nbsp; &nbsp;&nbsp;
 	
-	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp;&nbsp;<a target="_blank" href="http://www.geyimin.space/bbs">紫薇圣人社区</a>
-	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp;&nbsp; &nbsp;<a target="_blank" href="http://www.geyimin.space/bbs">紫薇圣人社区</a>
+	&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <a target="_blank" href="http://us.gegod.com">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+
 
 
  <a target="_blank" href="http://sb.20331126.xyz">投票</a>&nbsp; &nbsp;
 </font>
 
-	<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/god.html" target="_blank">葛神异闻录</A>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<b>  <a target="_blank" href="http://www.gegod.com/book/contact_book.php">留言本</a></b>
+	<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/god.html" target="_blank">葛神异闻录</A>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>  <a target="_blank" href="http://www.gegod.com/book/contact_book.php">留言本</a></b>
 <p> 
-<br>&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;微信公众号：godjiao（<font size="3">葛亦民</font><font size="4">）&nbsp;geyimin1969（</font><font size="3">神教）</font><font size="4">&nbsp;&nbsp;微视号： geyimin&nbsp;&nbsp; </font><br>
+<br>&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;微信公众号：<font size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 微视号： geyimin&nbsp;&nbsp; </font><br>
 	<p>
 <br>
 	 <br><font color="#800000">护卫舰：&nbsp;&nbsp; &nbsp; &nbsp; </font> </b>
 	
-	&nbsp;<font size="4"><a target="_blank" href="http://my.gegod.com/bbs">大同世界社区</a>&nbsp; &nbsp;<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;
+	&nbsp;<font size="4"><a target="_blank" href="http://my.gegod.com/bbs">大同世界社区</a>&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
-    <a target="_blank" href="http://home.gegod.com/bbs/">神社区</a>&nbsp;&nbsp;&nbsp;
+    <a target="_blank" href="http://home.gegod.com/bbs/">神社区</a>&nbsp;&nbsp; &nbsp;
  
-	  <a target="_blank" href="http://cn.gegod.com/bbs">日本论坛</a>&nbsp;&nbsp;&nbsp;
-<a target="_blank" href="http://post.gegod.com/bbs">大同世界社区</a> &nbsp; &nbsp;
-<a target="_blank" href="http://hao.gegod.com/bbs">紫微圣人社区</a>&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://bbs.gegod.eu.org">德国论坛</a>&nbsp;&nbsp;&nbsp;
+	  <a target="_blank" href="http://cn.gegod.com/bbs">日本论坛</a>&nbsp;&nbsp;&nbsp; &nbsp;
+<a target="_blank" href="http://post.gegod.com/bbs">大同世界社区</a> &nbsp;&nbsp;&nbsp; &nbsp;
+<a target="_blank" href="http://web.20331126.xyz/bbs">紫微圣人社区</a>&nbsp;&nbsp; &nbsp;&nbsp;<a target="_blank" href="http://bbs.gegod.eu.org">德国论坛</a>&nbsp;&nbsp; &nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;<a target="_blank"href="http://www.gegod.eu.org">神网</a>
 	
 
@@ -86,8 +85,8 @@
 
 	
 	
- <a target="_blank" href="http://geyimin.258club.com/">Sclub论坛</a>&nbsp;&nbsp;&nbsp;  <a target="_blank"href="http://geyimin.forumzh.com/">葛亦民论坛</a>&nbsp; &nbsp;
- <a target="_blank"href="https://60a0ff933604a.site123.me/">神社区</a>&nbsp; &nbsp;
+ <a target="_blank" href="http://geyimin.258club.com/">Sclub论坛</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <a target="_blank"href="http://geyimin.forumzh.com/">葛亦民论坛</a>&nbsp;&nbsp;&nbsp; &nbsp;
+ <a target="_blank"href="https://60a0ff933604a.site123.me/">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
  <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://web.gegod.com">神网</a><span class="style3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b> <a href="http://www.gegod.com/dxly/gwmfx.htm" target="_blank">功德箱</a></b></span>
 <br><br><br>
 
