--- a/lj.html
+++ b/lj.html
@@ -64,7 +64,7 @@
 <br>
 	 <br><font color="#800000">护卫舰：&nbsp;&nbsp; &nbsp; &nbsp; </font> </b>
 	
-	&nbsp;<font size="4"><a target="_blank" href="http://my.gegod.com/bbs">大同世界社区</a>&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	&nbsp;<font size="4"><a target="_blank" href="http://gym.gegod.com/bbs">神论坛</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://my.gegod.com/bbs">大同世界社区</a>&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
     <a target="_blank" href="http://home.gegod.com/bbs/">神社区</a>&nbsp;&nbsp; &nbsp;
