--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@ a:visited.ch {
 </P></TD></TR></TBODY></TABLE></div>     
 <div style="position:absolute; left:195px; top:71px; width:271px; height:341px; z-index:0; BACKGROUND-COLOR:">
 	<p align="center">
-	<img border=0 src="pic/wx.jpg" width="130" height="127"><br> </b></font>
-	葛亦民微信公众号:godjiao<br><br>神教微信公众号:geyimin1969<br><br><br><font size="3"> <strong>
+	<img border=0 src="pic/wx.jpg" width="150" height="150"><br><br> </b></font>
+	微信公众号:葛亦民异闻录<br><br><br><br><font size="3"> <strong>
 	<span lang="en-us"></span> <A href="god.html" target="_blank">葛神异闻录</A> </strong></font>
 	
 	
 	　</p>
 	<p>　<A href="pic/gsywl.html" target="_blank"><font size="4">html</font></A><font size="4">&nbsp;&nbsp;  <A href="pic/gsywl.txt" target="_blank">txt</A>&nbsp; &nbsp;<A href="pic/gsywl.rar" target="_blank">rar</A>&nbsp;&nbsp;
-		<A href="pic/gsywl.docx" target="_blank">doc</A>&nbsp;&nbsp; </font><A href="pic/gsywl.pdf" target="_blank"><font size="4">pdf</font></A><p><p><p align="center">
+		<A href="pic/gsywl.docx" target="_blank">doc</A>&nbsp;&nbsp; </font><A href="pic/gsywl.pdf" target="_blank"><font size="4">pdf</font></A><p align="center">
 		<b><font size="4"><br>anecdote of geyimin </font></b>&nbsp;<p>　<A href="pic/anecdoteofgeyimin.html" target="_blank"><font size="4">html</font></A><font size="4">&nbsp;&nbsp;  <A href="pic/anecdoteofgeyimin.txt" target="_blank">txt</A>&nbsp;&nbsp; <A href="pic/anecdoteofgeyimin.rar" target="_blank">rar</A>&nbsp;&nbsp;
 		<A href="pic/anecdoteofgeyimin.docx" target="_blank">doc</A>&nbsp; &nbsp;</font><A href="pic/anecdoteofgeyimin.pdf" target="_blank"><font size="4">pdf</font></A><p>
 	<p>&nbsp;</div>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <br>
