--- a/scsl/wx.html
+++ b/scsl/wx.html
@@ -10,21 +10,17 @@
 <b style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: large; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b><span style="font-size: large; letter-spacing: normal"><b>微信公众号</b></span></p>
 <p>　</p>
 
- 微信公众号：godjiao（葛亦民）
+ 微信公众号：葛亦民异闻录 
 <IMG SRC="../pic/wx.jpg">
 
 <p>　</p>
 
 
-微信公众号：geyimin1969（神教）
-
-<IMG SRC="../pic/wxg.jpg">
-
 
 
 
 <p>　</p>
-<p>QQ群75081524：<IMG SRC="../pic/qqqun.jpg">
+<p>QQ群      695836804   葛亦民异闻录<IMG SRC="../pic/qqqun.jpg">
 </p>
 
 
