--- a/lj.html
+++ b/lj.html
@@ -49,8 +49,9 @@
 		<a target="_blank" href="https://www.zhihu.com/people/de-yang-li-juan">知乎</a>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; <a target="_blank" href="https://weibo.com/g20331126">微博</a>&nbsp; &nbsp;&nbsp;
 	
 	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp;&nbsp; &nbsp;<a target="_blank" href="http://www.geyimin.space/bbs">紫薇圣人社区</a>
-	&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <a target="_blank" href="http://us.gegod.com">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+	&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <a target="_blank" href="http://us.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
 
+<a target="_blank" href="http://hao.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
  <a target="_blank" href="http://sb.20331126.xyz">投票</a>&nbsp; &nbsp;
