--- a/lj.html
+++ b/lj.html
@@ -31,7 +31,7 @@
 
 	</font> </font><font size="4" color="#800000">&nbsp;&nbsp;
 	
-	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a> &nbsp; &nbsp;  <a target="_blank" href="http://bbs.gegod.com/bbs">大同世界社区</a> &nbsp; &nbsp;&nbsp;
+	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a> &nbsp; &nbsp;  <a target="_blank" href="http://www.wjxw-lib.net/bbs">大同世界社区</a> &nbsp; &nbsp;&nbsp;
 	 <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://group.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
 <a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.sinovision.net/?591176">美国中文网</a>&nbsp; &nbsp;
@@ -65,7 +65,7 @@
 <br>
 	 <br><font color="#800000">护卫舰：&nbsp;&nbsp; &nbsp; &nbsp; </font> </b>
 	
-	&nbsp;<font size="4"><a target="_blank" href="http://gym.gegod.com/bbs">神论坛</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://my.gegod.com/bbs">大同世界社区</a>&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	&nbsp;<font size="4"><a target="_blank" href="http://gym.gegod.com/bbs">神论坛</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.kaila.com.cn/bbs">大同世界社区</a>&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
     <a target="_blank" href="http://home.gegod.com/bbs/">神社区</a>&nbsp;&nbsp; &nbsp;
