--- a/lj.html
+++ b/lj.html
@@ -33,7 +33,7 @@
 	
 	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a> &nbsp; &nbsp;  <a target="_blank" href="http://www.wjxw-lib.net/bbs">大同世界社区</a> &nbsp; &nbsp;&nbsp;
 	 <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://group.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
-<a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
+<a target="_blank" href="http://sb.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.sinovision.net/?591176">美国中文网</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://home.20331126.xyz">yooco论坛</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;
@@ -60,7 +60,10 @@
 	<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/god.html" target="_blank">葛神异闻录</A>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>  <a target="_blank" href="http://www.gegod.com/book/contact_book.php">留言本</a></b>
 <p> 
-<br>&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;微信公众号：<font size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;葛亦民异闻录&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 微视号： geyimin&nbsp;&nbsp; </font><br>
+<br>&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;微信公众号：<font size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;葛亦民异闻录&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><span lang="en-us"><font size="4"><b> 
+QQ群:&nbsp;&nbsp;695836804&nbsp; </b>
+	
+	</font></span><font size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 微视号： geyimin&nbsp;&nbsp; </font><br>
 	<p>
 <br>
 	 <br><font color="#800000">护卫舰：&nbsp;&nbsp; &nbsp; &nbsp; </font> </b>
