--- a/lj.html
+++ b/lj.html
@@ -33,7 +33,7 @@
 	
 	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a> &nbsp; &nbsp;  <a target="_blank" href="http://www.wjxw-lib.net/bbs">大同世界社区</a> &nbsp; &nbsp;&nbsp;
 	 <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://group.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
-<a target="_blank" href="http://sb.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
+<a target="_blank" href="http://bbs.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.sinovision.net/?591176">美国中文网</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://home.20331126.xyz">yooco论坛</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;
@@ -88,7 +88,7 @@ QQ群:&nbsp;&nbsp;695836804&nbsp; </b>
 
 
 	
-	
+	<a target="_blank" href="http://sb.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
  <a target="_blank" href="http://geyimin.258club.com/">Sclub论坛</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <a target="_blank"href="http://geyimin.forumzh.com/">葛亦民论坛</a>&nbsp;&nbsp;&nbsp; &nbsp;
  <a target="_blank"href="https://60a0ff933604a.site123.me/">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
  <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://web.gegod.com">神网</a><span class="style3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b> <a href="http://www.gegod.com/dxly/gwmfx.htm" target="_blank">功德箱</a></b></span>
