--- a/god.html
+++ b/god.html
@@ -90,7 +90,8 @@
 <A href="dxly/fyfry13.htm" target="_blank">第十三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry14.htm" target="_blank">第十四章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/fyfry15.htm" target="_blank">第十五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry16.htm" target="_blank">第十六章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/fyfry17.htm" target="_blank">第十七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry18.htm" target="_blank">第十八章</A>&nbsp;&nbsp;&nbsp;
-<A href="dxly/fyfry19.htm" target="_blank">第十九章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/fyfry19.htm" target="_blank">第十九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry20.htm" target="_blank">第二十章</A>&nbsp;&nbsp;&nbsp;
+
 
 
 <p>　</p>
