--- a/lj.html
+++ b/lj.html
@@ -58,7 +58,7 @@
 </font>
 
 	<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/god.html" target="_blank">葛神异闻录</A>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>  <a target="_blank" href="http://www.gegod.com/book/contact_book.php">留言本</a></b>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>  <a target="_blank" href="http://www.gegod.com/book/">留言本</a></b>
 <p> 
 <br>&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;微信公众号：<font size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;葛亦民异闻录&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><span lang="en-us"><font size="4"><b> 
 QQ群:&nbsp;&nbsp;695836804&nbsp; </b>
@@ -68,7 +68,7 @@ QQ群:&nbsp;&nbsp;695836804&nbsp; </b>
 <br>
 	 <br><font color="#800000">护卫舰：&nbsp;&nbsp; &nbsp; &nbsp; </font> </b>
 	
-	&nbsp;<font size="4"><a target="_blank" href="http://gym.gegod.com/bbs">神论坛</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.kaila.com.cn/bbs">大同世界社区</a>&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	&nbsp;<font size="4"><a target="_blank" href="http://geyimin.eu.org/bbs">神论坛</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.kaila.com.cn/bbs">大同世界社区</a>&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
     <a target="_blank" href="http://home.gegod.com/bbs/">神社区</a>&nbsp;&nbsp; &nbsp;
@@ -91,7 +91,7 @@ QQ群:&nbsp;&nbsp;695836804&nbsp; </b>
 	<a target="_blank" href="http://sb.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
  <a target="_blank" href="http://geyimin.258club.com/">Sclub论坛</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <a target="_blank"href="http://geyimin.forumzh.com/">葛亦民论坛</a>&nbsp;&nbsp;&nbsp; &nbsp;
  <a target="_blank"href="https://60a0ff933604a.site123.me/">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
- <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://web.gegod.com">神网</a><span class="style3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b> <a href="http://www.gegod.com/dxly/gwmfx.htm" target="_blank">功德箱</a></b></span>
+ <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://www.geyimin.gay">葛亦民网</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://web.gegod.com">神网</a><span class="style3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b> <a href="http://www.gegod.com/dxly/gwmfx.htm" target="_blank">功德箱</a></b></span>
 <br><br><br>
 
 		
