--- a/index.html
+++ b/index.html
@@ -152,18 +152,18 @@ a:visited.ch {
  
             <TD width=128 height=58 align="center"><a href="pl.html">
 			<font size="2" color="#008080">网友评论</font></a></TD>    
-	<TD width=141 height=58 align="center"><A href="http://www.gegod.com/book/contact_book.php" target="_blank"><FONT color=#008080 size=2>
+	<TD width=141 height=58 align="center"><A href="http://www.gegod.com/book/" target="_blank"><FONT color=#008080 size=2>
 			留言本</FONT></A>    
             </TD>  
     
           </TR></TBODY></TABLE></TD></TR></TBODY></TABLE></div>      
 <div style="position: absolute; left: 194px; top: 68px; width: 517px; height: 494px; z-index: 0">       
   <TABLE width="485" border=0 style="height: 275px"><TBODY><TR>      
-      <TD  width=242>
+      <TD  width=242 style="height: 318px">
 		<p>&nbsp; 　<p>&nbsp;<p><p>　 
 		
 		<p>&nbsp;<p>&nbsp;<p>&nbsp;<p>&nbsp;<p><p></TD>      
-      <TD width="233">       
+      <TD width="233" style="height: 318px">       
          
         <font size="3">
  
@@ -197,12 +197,7 @@ a:visited.ch {
 		<font size="2" <br><font size="3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			 <A href="dxly/rw.htm" target="_blank">日本語</A></font><span class="style3">&nbsp; &nbsp;
 			 <A href="dxly/hy.htm" target="_blank">&#49888;&#51032; &#47568;&#50432; &#51012;</A></span></font></p>
-		<p>
-		　</p>
-		<p>
-		　</p>
-		<p>
-		　</p>
+		
 		<p>
 		<font size="4" <br><br><br>
 	
@@ -219,7 +214,7 @@ a:visited.ch {
 <div style="position:absolute; left:195px; top:71px; width:271px; height:341px; z-index:0; BACKGROUND-COLOR:">
 	<p align="center">
 	<img border=0 src="pic/wx.jpg" width="150" height="150"><br><br> </b></font>
-	微信公众号:葛亦民异闻录<br><br><br><br><font size="3"> <strong>
+	微信公众号:&nbsp;&nbsp;&nbsp;葛亦民异闻录<br><br><br><br><font size="3"> <strong>
 	<span lang="en-us"></span> <A href="god.html" target="_blank">葛神异闻录</A> </strong></font>
 	
 	
@@ -345,10 +340,8 @@ var _hmt = _hmt || [];
 </font></a>，<a href="scsl/shji2018(1479603394).mht" target="_blank">书刊注册组注册。</font></a><br>
 </span><br>
 <span class="style2"><font size="2">1、中国知网收录《青年文学家》期刊2015年4月11期葛亦民论文<a href="http://www.cnki.com.cn/Article/CJFDTotal-QNWJ201511133.htm" target="_blank">《当代基督教共产主义—葛亦民的&lt;神经&gt;》</a> <br><br>
-2、</font><a href="https://d.wanfangdata.com.cn/periodical/qnwxj201511132" target="_blank"><font size="2">万方数据收录</font></a></span><br><br>
 
-3、</font><a href="https://www.zhangqiaokeyan.com/academic-journal-cn_youth-literator_thesis/0201241838102.html" target="_blank"><font size="2">掌桥科研收录</font></a></span><br><br>
-4、</font><a href="https://xueshu.baidu.com/usercenter/paper/show?paperid=80f9f7b29ea471e4b56be623c397e725" target="_blank"><font size="2">百度学术收录</font></a></span><br><br>
+2、</font><a href="https://xueshu.baidu.com/usercenter/paper/show?paperid=80f9f7b29ea471e4b56be623c397e725" target="_blank"><font size="2">百度学术收录</font></a></span><br><br>
 
 <font size="2">神经（耶梅经)新闻： <br>
 1、</font><a href="../gzly/qqxw.jpg" target="_blank"><font size="2">社会化大生产和互联网大革命-天天快报-腾讯网</font></a><br><br>
