--- a/pic/anecdoteofgeyimin.html
+++ b/pic/anecdoteofgeyimin.html
@@ -28,29 +28,20 @@
 
 
 
-</p>    &nbsp;Ge Yi Min&#39;s hearsay record<br>
+</p>   
+<br>
+anecdote of geyimin<br>
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-Written by GE Yimin<br>
-<br>
-<br>
+　　　　Written by GE Yimin<br>
 <br>
 <br>
 <br>
 Ge Yimin &#39;s Six volume memoirs<br>
 <br>
 <br>
-<br>
-<br>
-June 2022<br>
-<br>
-<br>
-<br>
+10 2022<br>
 <br>
 <br>
 <br>
@@ -613,8 +604,8 @@ them, you will return them.<br>
 <br>
 Today, just after the evening self-study, there was a sudden power failure, so 
 there was a commotion. The students went out of the classroom one after another. 
-At this time, the cries of people, the voice of Hohhot, the sound of desks and 
-stools being knocked, filled the building, and I also went out of the classroom. 
+At this time, the cries of people, people shout, the sound of desks and stools 
+being knocked, filled the building, and I also went out of the classroom. 
 Looking from the railing, the lights of Jurong City were all off, only the 
 lights of the fertilizer plant in the distance were flashing, and the moon was 
 surprisingly good (the 12th day of the lunar calendar), making the ground very 
@@ -627,13 +618,13 @@ of trees, which were round and bright, flashing a little red light, like a small
 sun. At this time, when the wind blew, I suddenly remembered a sentence: &quot;the 
 sound came from the ear, the color came from the eye, and the use of it was 
 inexhaustible.&quot; &quot;The bright moon and clear wind are priceless, and there are 
-ancient couples among famous poets,&quot; he said At this time, a Li Erqiao from Qin 
-bin, who had just been transferred from Dazhuo, came. So we talked about Zhuo 
-Zhonghe and Huang Zhong. Qin said &quot;living on both sides of Hongcheng&quot;, but I was 
-silent. After talking for a long time, I said, &quot;how many teachers and classmates 
-do you have to meet from primary school to university?&quot; they both praised Qin 
-bin. Qin bin talked about his favorite teachers. I asked me, but there was no 
-one. I was surprised.<br>
+ancient couples among famous poets,&quot; he said At this time, Qin Bin and Li 
+Erqiao, who had just transferred from Dazhu Middle School, came, So we talked 
+about Zhuo Zhonghe and Huang Zhong. Qin said &quot;living on both sides of 
+Hongcheng&quot;, but I was silent. After talking for a long time, I said, &quot;how many 
+teachers and classmates do you have to meet from primary school to university?&quot; 
+they both praised Qin bin. Qin bin talked about his favorite teachers. I asked 
+me, but there was no one. I was surprised.<br>
 <br>
 At nearly 9 o&#39;clock, a call came, so he entered the classroom for self-study.<br>
 <br>
@@ -16113,23 +16104,89 @@ nerve God, and mankind will always be in the dark, like a long night.<br>
 <br>
 <br>
 <br>
+Chapter XX<br>
 <br>
+The treatment methods in psychiatric hospitals are taking medicine and binding. 
+There was electric acupuncture before, but now it is basically not done. It is 
+said that it is cruel, inhumane, and violates human rights. There is less 
+electric shock. It&#39;s easy to understand that taking medicine can stabilize your 
+mood and control your brain&#39;s displeasure. Binding is a big means. The doctors 
+and nurses call it protection. There are five bindings in total, namely, five 
+colorful ones, and the neck and chest doctors and nurses call it a big belt. 
+Single protection, double protection, three protection... Distinguish between 
+hands and feet, such as double protection, with two hands or one hand and one 
+foot. Of course, the most serious is the five protections of hands, feet, neck 
+and chest:) I have learned many times. Once I was tied too tightly, I felt 
+uncomfortable breathing. I shouted to loosen up, and the nurses and health 
+workers ignored them. Fortunately, I fell asleep soon.<br>
 <br>
+When a new patient comes in, he is tied to his bed. Doctors, nurses, health 
+workers and dog leg patients will all participate. Sometimes I also participate. 
+I learn a move. The patient struggles hard. When I cover his mouth with a 
+pillow, he becomes bored. Of course, I can only cover it for a little while. 
+Director Yao Hongxiu once reminded me.<br>
 <br>
+Fights are common in the bathroom. I once talked with Wang Ming in the bathroom 
+and said that fighting was boring. Wang Ming said, &quot;Be busy with money&quot;:)<br>
 <br>
+I want to go out and send a banner to Tao Lingwei, thinking about what words to 
+write. If someone sends a banner, nurses or doctors will be rewarded. Speaking 
+to Jia Jianqing, she advised me not to give it away for fear that I would spend 
+money. Later, when I mentioned it to her again, she said, &quot;I want it too.&quot;.<br>
 <br>
+I am interested in Pi. I clearly remember what the primary school teacher said: 
+&quot;A lion and a pot of wine on the top of the mountain. After two deer dance, we 
+can eat wine and kill people. &quot;I was very impressed, but I was hospitalized many 
+times (I call it a trial), and it was just&quot; I can&#39;t kill you &quot;, looking forward 
+to&quot; Le Er Le &quot;. I once put 3.14159 leaves on the table in the activity room... 
+Director Tian Zhihong saw that, of course, he could not understand, so he asked 
+me to take it away.<br>
 <br>
+When Li Xiannian was the President of the country, a patient and a doctor said, 
+&quot;If you want to be the President of the country, Li Xiannian can be, and I can 
+be.&quot;:)<br>
 <br>
+In that speech to a group of medical students about communism, I said that the 
+hospital did not eat well, but learned to eat well. A boy said, &quot;I&#39;m not good at 
+eating.&quot;:)<br>
 <br>
+After the first hospitalization, my family asked a fortune teller and the witch 
+said, &quot;I have two PLA men and a woman in my body.&quot;<br>
 <br>
+And Jia Jianqing said: &quot;Everyone has a bank (referring to selling blood), while 
+women have two banks (selling...)&quot;<br>
 <br>
+Once, an accompanying elder sister gave me fried dough sticks to eat, but I 
+refused, saying, &quot;Don&#39;t give a needle to the masses.&quot; She said something 
+serious. I do have a characteristic that I don&#39;t eat other people&#39;s food. For 
+example, I don&#39;t smoke other people&#39;s cigarettes at work. I don&#39;t accept any 
+cigarettes from customers. I think I&#39;m the last Red Army.<br>
 <br>
+By the way, the beautiful doctor mentioned last time is Xu Jiaoyi. Director 
+Chang Xianlu, I asked him, &quot;Are you a Party member?&quot; A: &quot;Of course.&quot; Well, I&#39;m 
+very proud. When I talked about communism with him, he said, &quot;Who else believes 
+this now?&quot; I said, &quot;You are a Party member, but you say so?&quot; He immediately 
+walked away with a smile.<br>
 <br>
+A patient named Zhang Aimin, for example, how old he is, sometimes he can&#39;t take 
+care of himself. He urinates on his body and quilt. Nurses and health workers 
+deal with the quilts and pillows that have urinated. They just dry them on the 
+balcony and continue to give them to the patient without washing them. He took a 
+copy of The Outlaws of the Marsh with him when he was in hospital. He read it 
+every day and read a page for half a day. I called him an expert on the study of 
+the marsh. He was very familiar with the nickname of 108 heroes. Li Yuanba still 
+admired it and pulled me to listen. I said, &quot;What&#39;s the use of knowing this?&quot; 
+His mother takes care of him. His mother likes me very much and likes talking 
+with me. Although she is old, she is dignified and likes to wear red clothes. 
+Once when I saw her, I was so considerate of her hardships that I cried loudly 
+inside. When the nurse asked why, I said I saw her.<br>
 <br>
-<br>
-<br>
-<br>
-<br>
+Once I met her on Zhengdong Road, she asked, &quot;How about Zhang Aimin?&quot; Of course, 
+I said it was OK. She said, &quot;It&#39;s not good at home. It&#39;s better to put it 
+inside.&quot; Later, she died, and I happened to be in the hospital. Jia Jianqing 
+asked Zhang Aimin to go home to mourn. Zhang Aimin just wore red clothes and 
+didn&#39;t know his mother died. Jia Jianqing found a white T-shirt and changed it 
+for him.<br>
 <br>
 <br>
 <br>
@@ -27100,7 +27157,7 @@ world.<br>
 <br>
 <br>
 <br>
-June 2022<br>
+10 2022<br>
 <br>
 <br>
 <br>
@@ -27109,6 +27166,15 @@ June 2022<br>
 Copyright God&#39;s website. http://www.gegod.com<br>
 <br>
 Mailbox sejeme@163.com Welcome to reprint.<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
@@ -27136,7 +27202,7 @@ var _hmt = _hmt || [];
 })();
 </script>	
 	
-</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- h -->
 <ins class="adsbygoogle"
      style="display:block"
