--- a/nszz/gymsp.htm
+++ b/nszz/gymsp.htm
@@ -4,11 +4,6 @@
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>葛亦民视频、赞美歌</title>
-<style type="text/css">
-.style1 {
-	margin-left: 40px;
-}
-</style>
 <script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
 </head>
 
@@ -155,7 +150,7 @@
 </span><a target="_blank" a href="http://www.gegod.com/movie/p/aoyun.mp4">我的夺冠时刻</a>&nbsp;<p>
 
 　<p>
-<font size="4" color="#800080">　<p><span lang="en-us">
+
 <font size="6" color="#800080">&nbsp;&nbsp; 四、 </font></span><font size="5" color="#800080">
 	<a target="_blank" a href="https://pan.baidu.com/s/1bMJMpIfm037EwBUtQBGexg?pwd=mcvf ">百度网盘葛亦民视频、直播神经视频集</a></font>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
 
@@ -168,7 +163,7 @@
 <a target="_blank" a href="http://v.youku.com/v_show/id_XNjQyMjcxNjE2.html">【葛亦民与儿子】</a><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>
 <a target="_blank" a href="../pic/sjdouyin.mp4">【十句神经真言抖音】葛神2019</a>&nbsp;&nbsp;
 
-　</p><font size="5" color="#800080">　<p><span lang="en-us">
+　</p>
 <font size="6" color="#800080">&nbsp;&nbsp; 五、</font></span>葛花演唱的葛亦民神赞美歌 </font></font></font></font><font size="6" color="#800080">音频</font><font size="4" color="#800080"><br>
 <br>
 1、
@@ -210,7 +205,11 @@
 <a target="_blank" a href="../rj/ghzyz.mp3">
 葛花赵雅芝演唱（推荐）</a>&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;
+<font size="6" color="#800080">&nbsp;&nbsp; <br>
+<br>
+六、 <font size="5" color="#800080">
+	<a target="_blank" a href="http://www.gegod.com/video/">葛亦民官网视频库</a></font>
+&nbsp;&nbsp;&nbsp;<p>　</p>
 <script>
 var _hmt = _hmt || [];
 (function() {
