--- a/gzly/zp2.htm
+++ b/gzly/zp2.htm
@@ -52,7 +52,16 @@
 <p>工人们看见了葛神都乐开了花（指葛亦民）</p>
 <p><img border="0" src="../rj/gy.jpg"><img border="0" src="../rj/ysyl.jpg"></p>
 <p>　</p><p>　</p>
-<p> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　</font></p>
+<p>　</p>
+<p> <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></font><font size="5" color="#800080">
+	&nbsp;<a target="_blank" a href="http://www.gegod.com/picture/">葛亦民官网图片库</a></font>
+
+
+&nbsp;&nbsp;&nbsp;<p>　</p>
+<p>　</p>
+
 <script>
 var _hmt = _hmt || [];
 (function() {
