--- a/gzly/zp3.htm
+++ b/gzly/zp3.htm
@@ -51,7 +51,16 @@
 <p><img border="0" src="../rj/gymny2.jpg"></p><p><img border="0" src="../rj/gymny3.jpg"></p><p><img border="0" src="../rj/gymny4.jpg"></p>
 <p><img border="0" src="../rj/gymny5.jpg"></p><p><img border="0" src="../rj/gymny7.jpg"></p><p><img border="0" src="../rj/gymny6.jpg"></p>
 <p>　</p><p>　</p>
-<p> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　</font></p>
+<p>　</p>
+<p> <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></font><font size="5" color="#800080">
+	&nbsp;<a target="_blank" a href="http://www.gegod.com/picture/">葛亦民官网图片库</a></font>
+
+
+&nbsp;&nbsp;&nbsp;<p>　</p>
+<p>　</p>
+
 <p><script>
 var _hmt = _hmt || [];
 (function() {
