--- a/gzly/zp5.htm
+++ b/gzly/zp5.htm
@@ -32,7 +32,15 @@
 <img border="0" src="../dxrj/ggc.jpg"><img border="0" src="../dxrj/ggp.jpg"><img border="0" src="../dxrj/qc.jpg"><img border="0" src="../dxrj/yx.jpg"><img border="0" src="../dxrj/2017.jpg">
 
 <p>　</p><p>　</p>
-<p> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　</font></p>
+<p>　</p>
+<p> <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></font><font size="5" color="#800080">
+	&nbsp;<a target="_blank" a href="http://www.gegod.com/picture/">葛亦民官网图片库</a>
+
+&nbsp;&nbsp;&nbsp;<p>　</p>
+<p>　</p>
+
 <p><script>
 var _hmt = _hmt || [];
 (function() {
