--- a/gzly/zp6.htm
+++ b/gzly/zp6.htm
@@ -41,9 +41,17 @@
 <p>　</p><p>　</p>
 
 <p>　</p><p>　</p>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<A href="../gzly/gzly1.htm" target="_blank">高中同学留言（上）</A> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp<A href="../gzly/gzly2.htm" target="_blank">高中同学留言（下）</A> >&nbsp; &nbsp;<A href="../dxly/dxly1.htm" target="_blank">大学同学留言（上）</A>&nbsp;&nbsp;<A href="../dxly/dxly2.htm" target="_blank">大学同学留言（下）</A>
+&nbsp;&nbsp;&nbsp;&nbsp;<A href="../gzly/gzly1.htm" target="_blank">高中同学留言（上）</A> &nbsp;&nbsp;&nbsp;&nbsp;<A href="../gzly/gzly2.htm" target="_blank">高中同学留言（下）</A> &nbsp; &nbsp;<A href="../dxly/dxly1.htm" target="_blank">大学同学留言（上）</A>&nbsp;&nbsp;<A href="../dxly/dxly2.htm" target="_blank">大学同学留言（下）</A>
 <p>　</p><p>　</p>
-<p> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　</font></p>
+<p>　</p>
+<p> <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></font><font size="5" color="#800080">
+	&nbsp;<a target="_blank" a href="http://www.gegod.com/picture/">葛亦民官网图片库</a></font>
+
+&nbsp;&nbsp;&nbsp;<p>　</p>
+<p>　</p>
+
 <p><script>
 var _hmt = _hmt || [];
 (function() {
