--- a/gzly/zp7.htm
+++ b/gzly/zp7.htm
@@ -24,7 +24,16 @@
 <img border="0" src="../dxrj/tam2.jpg"><img border="0" src="../dxrj/c2d.jpg"><img border="0" src="../dxrj/gold2d.jpg"><img border="0" src="../dxrj/ymgtx.jpg">
 <img border="0" src="../dxrj/tiebadv.jpg"><img border="0" src="../dxrj/anecdote of geyimin.jpg"><img border="0" src="../dxrj/bggym.jpg">
 <img border="0" src="../dxrj/xj.jpg"><p>　</p>
-<p> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　</font></p>
+<p>　</p>
+<p> <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></font><font size="5" color="#800080">
+	&nbsp;<a target="_blank" a href="http://www.gegod.com/picture/">葛亦民官网图片库</a></font>
+
+
+&nbsp;&nbsp;&nbsp;<p>　</p>
+<p>　</p>
+
 <p><script>
 var _hmt = _hmt || [];
 (function() {
